k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: razorpagesmovie
spec:
  replicas: 20
  selector:
    matchLabels:
      app: razorpagesmovie
  template:
    metadata:
      labels:
        app: razorpagesmovie
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: razorpagesmovie-sa
      containers:
      - name: razorpagesmovie
        image: mltestacr6.azurecr.io/razorpagesmovie:latest
        resources:
          requests:
            cpu: 500m
            memory: 256Mi
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: razorpagesmovie-service
spec:
  type: LoadBalancer
  selector:
    app: razorpagesmovie
  ports:
  - port: 80
    targetPort: 8080
